--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -19,7 +19,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"C:/Users/anmavtb/Documents/Dev/Perso/BlueprintGrid_2.0/BUILDS;C:/Users/anmavtb/Documents/Dev/Perso/BlueprintGrid_2.0/WebGL Builds;;;;;;;;\"}"
+                "value": "{\"m_Value\":\"C:/Users/anmavtb/Documents/Dev/Perso/BUILDS;C:/Users/anmavtb/Documents/Dev/Perso/BlueprintGrid_2.0/BUILDS;C:/Users/anmavtb/Documents/Dev/Perso/BlueprintGrid_2.0/WebGL Builds;;;;;;;\"}"
             }
         ]
     }
